<resources>
    <string name="app_name">ClothShop</string>

    <!--    Flash screen text: start -->
    <string name="flash_main">\t\tPULSE \nFASHION</string>
    <string name="flash_sub">\t\t\t\t\t\tElevate Your style, \nFeel the Pulse of Fashion!</string>
    <string name="flash_slider">Get started</string>
    <!--    Flash screen text: end -->

    <!--    Login screen text: start -->
    <string name="sign_in">Sign In</string>
    <string name="welcome_note_1">Let You Sign In</string>
    <string name="welcome_note_2">Welcome back, you’ve been missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_note_1">Let’s Sign You In</string>
    <string name="sign_in_note_2">Welcome back, you’ve been missed!</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="fp_text">Forgot your password? -></string>
    <string name="dh_text">Don’t have an account -></string>
    <!--    Login screen text: end -->

    <!--    Sign up screen text: start -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_note_1">Getting Started</string>
    <string name="sign_up_note_2">Create an account to continued</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="ar_text">Already have an account -></string>
    <!--    Sign up screen text: end -->

    <!--    Product view screen text: start -->
    <string name="productViewTitle"><![CDATA[H & M]]></string>
    <string name="productViewPrice">20 $</string>
    <string name="productViewRating">4.8</string>
    <string name="productViewDescription">Short dress in soft cotton jersey with decorative buttons down the front and a wide, frill-trimmed square neckline with concealed elastication. Elasticated seam under the bust and short puff sleeves with a small frill trim.</string>
    <string name="productViewAddBtn">Add to Bag</string>
    <string name="bagViewTitle">My Bag</string>
    <string name="bagViewProductTitle">HM Dress</string>
    <!--    Product view screen text: end -->

    <!--    Home screen text: start -->
    <string name="search">search</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="bag">Bag</string>
    <!--    Home screen text: end -->

    <!--    Bottom nav bar screen text: start -->
    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_bag">Bag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Bottom nav bar text: end -->

    <!--    Sign up screen text: start -->
    <string name="forgot_password">Forgot Password</string>
    <string name="fp_email">Email</string>
    <string name="fp_description">Provide your account email for \n which you want to reset your password</string>
    <string name="fp_resetBtn">Reset Password</string>
    <string name="fp_back">Back</string>
    <string name="title_activity_category">CategoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!--    Sign up screen text: end -->

    <!--    Bag screen text: start -->
    <string name="cart">My Bag</string>
    <string name="promo">Enter your promo code</string>
    <string name="checkout">Checkout</string>
    <string name="total_msg">Total Amount : </string>
    <!--    Bag screen text: end -->

</resources>