<?xml version="1.0" encoding="utf-8"?>
<!-- IM/2020/027 - started -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/loginback">

    <android.widget.Button
        android:id="@+id/back_btn"
        android:layout_width="60dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:textColor="@color/beige"
        app:layout_constraintBottom_toBottomOf="@+id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text1"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="323dp"
        android:layout_height="79dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/fp_description"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />


    <EditText
        android:id="@+id/email"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/sign_up_email"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text2"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintVertical_bias="0.058" />

    <android.widget.Button
        android:id="@+id/resetBtn"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:onClick="resetPassword"
        android:padding="5dp"
        android:text="@string/fp_resetBtn"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="#D3B398"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />


</androidx.constraintlayout.widget.ConstraintLayout>
    <!-- IM/2020/027 - stopped -->